# -*- mode: meson -*-
# SPDX-License-Identifier: LGPL-2.1+

option('debug-extra', type : 'array', choices : ['hashmap'], value : [],
       description : 'enable extra debugging')

option('nobody-user', type : 'string',
       description : 'The name of the nobody user (the one with UID 65534)',
       value : 'nobody')

option('audit', type : 'combo', choices : ['auto', 'true', 'false'],
       description : 'libaudit support')
